syntax = "proto3";

package zombie;

service ZombieService {
  rpc FindOne (ZombieById) returns (Zombie) {}
}

message ZombieById {
  int32 id = 1;
}

message Zombie {
  int32 id = 1;
  string name = 2;
}
